--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <img src="images/basketfront.png" class="basket" id="basketfront" alt="basketfront">
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/script.js"></script>
+
+    <p>
+        Its my changes Shishir Gajurel
+    </p>
 </body>
 
 </html>
